[package]
name = "basic-auth-raw"
version = "0.1.0"
description = "A library to provide a base for Basic Authentication for use in Rocket"
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]
homepage = "https://github.com/csharad/basic-auth-raw"
repository = "https://github.com/csharad/basic-auth-raw"
documentation = "https://docs.rs/basic-auth-raw"
license = "MIT"
readme = "./README.md"

[dependencies]
rocket = "0.3.10"
base64 = "0.9.1"
